[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scenes/ui/screens/EndScreen.gd" id="1_abcde"]
[ext_resource type="PackedScene" uid="uid://dx17x7w7m17e1" path="res://scenes/main/ParticleBackground.tscn" id="2_fghij"]
[ext_resource type="Theme" uid="uid://co0vpelv70yyn" path="res://scenes/ui/Theme/MainUITheme.tres" id="3_klmno"]


[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_abcde")

[node name="ParticleBackground" parent="." instance=ExtResource("2_fghij")]

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ResultLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_klmno")
theme_override_font_sizes/font_size = 32
text = "结果占位符"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_klmno")
theme_override_font_sizes/font_size = 18
text = "统计数据占位符"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_klmno")
text = "重新开始"

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_klmno")
text = "返回主菜单"

[connection signal="pressed" from="CenterContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
